--- a/.gitignore
+++ b/.gitignore
@@ -78,5 +78,6 @@ Standard\ Assets/
 Standard\ Assets.meta
 CrossPlatformInput/
 CrossPlatformInput.meta
-
+# xcode builds
+Bootkammergrab/
 ProjectSettings/
